fix: JDK17-unsafe List.getFirst() in EdgeAppendMerge* tests
Introduced by cherry-picked commit d73789d3d (fix: edge-append merge
reverted concurrent writes on multi-page edge chunks). List.getFirst()
is a JDK21 SequencedCollection default method not available under
java17 --release compilation; replace with get(0).